// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component snapshots compound (Header + Body + Footer, md) 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  testID="dialog-modal"
  transparent={true}
  visible={true}
>
  <View
    accessibilityLabel="Close dialog"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      }
    }
    testID="dialog-backdrop"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "maxWidth": "95%",
          "minWidth": 320,
          "padding": 20,
        }
      }
      testID="dialog-panel"
    >
      <View
        alignItems="center"
        justifyContent="space-between"
        marginBottom={12}
        testID="dialog-header"
      >
        <Text
          color="#111827"
          flexShrink={1}
          fontSize={18}
          fontWeight="600"
        >
          Delete?
        </Text>
        <View
          accessibilityLabel="Close"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="dialog-header-close"
        >
          <Text
            color="#374151"
            fontSize={20}
            fontWeight="500"
          >
            ×
          </Text>
        </View>
      </View>
      <View
        gap={8}
        testID="dialog-body"
      >
        <Text>
          Body text
        </Text>
      </View>
      <View
        gap={8}
        justifyContent="flex-end"
        marginTop={16}
        testID="dialog-footer"
      >
        <Text>
          Action
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Dialog component snapshots dark theme × md compound 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  testID="dialog-modal"
  transparent={true}
  visible={true}
>
  <View
    accessibilityLabel="Close dialog"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      }
    }
    testID="dialog-backdrop"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1F2937",
          "borderRadius": 16,
          "maxWidth": "95%",
          "minWidth": 320,
          "padding": 20,
        }
      }
      testID="dialog-panel"
    >
      <View
        alignItems="center"
        justifyContent="space-between"
        marginBottom={12}
        testID="dialog-header"
      >
        <Text
          color="#F9FAFB"
          flexShrink={1}
          fontSize={18}
          fontWeight="600"
        >
          Dark theme dialog
        </Text>
        <View
          accessibilityLabel="Close"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="dialog-header-close"
        >
          <Text
            color="#D1D5DB"
            fontSize={20}
            fontWeight="500"
          >
            ×
          </Text>
        </View>
      </View>
      <View
        gap={8}
        testID="dialog-body"
      >
        <Text>
          Body
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Dialog component snapshots large size (lg) 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  testID="dialog-modal"
  transparent={true}
  visible={true}
>
  <View
    accessibilityLabel="Close dialog"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      }
    }
    testID="dialog-backdrop"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "maxWidth": "95%",
          "minWidth": 480,
          "padding": 20,
        }
      }
      testID="dialog-panel"
    >
      <Text>
        x
      </Text>
    </View>
  </View>
</Modal>
`;

exports[`Dialog component snapshots simple (children only, sm) 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  testID="dialog-modal"
  transparent={true}
  visible={true}
>
  <View
    accessibilityLabel="Close dialog"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 16,
      }
    }
    testID="dialog-backdrop"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 16,
          "maxWidth": "95%",
          "minWidth": 240,
          "padding": 20,
        }
      }
      testID="dialog-panel"
    >
      <Text>
        Simple content
      </Text>
    </View>
  </View>
</Modal>
`;
